--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer components {
+  .btn-blue {
+    @apply bg-blue-500 hover:bg-blue-700 text-white py-1 px-4 rounded;
+  }
+  .btn-green {
+    @apply bg-green-500 hover:bg-green-700 text-white py-1 px-4 rounded;
+  }
+}
