build: common panel

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -13,4 +13,7 @@
   .btn-green {
     @apply bg-green-500 hover:bg-green-700 text-white py-1 px-4 rounded;
   }
+  .u-panel {
+    @apply w-full p-6 rounded-xl border border-blue-500 space-y-6
+  }
 }
