build: theme night clear

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -14,6 +14,6 @@
     @apply bg-green-500 hover:bg-green-700 text-white py-1 px-4 rounded;
   }
   .u-panel {
-    @apply w-full p-6 rounded-xl border border-blue-500
+    @apply w-full p-6 rounded-xl border border-blue-500 backdrop-blur-md bg-white/10 dark:text-white
   }
 }
